Chapter05/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
    - ip: 10.32.0.2
    - ip: 10.32.0.3
    - ip: 10.32.0.4
    ports:
    - port: 80
